# messenger

./: .gitignore  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.show.yml  docker-compose.yml
.github/workflows/: ci.yml
src/: Dockerfile  Makefile  alembic.ini  example_env  main.py  pyproject.toml  setup.cfg
src/api/: router.py
src/api/v1/: auth.py  chat.py  messages.py
src/core/: config.py  constants.py  enums.py  exceptions.py
src/db/: __init__.py  session.py
src/db/init_data/: init_data.py
src/db/models/: __init__.py  chat.py  chat_participant.py  message.py  user.py
src/db/repositories/: chat.py  user.py
src/migrations/versions/: 2025-04-03_chat_messsage_group_user.py
src/schemas/: auth.py  base.py  chat.py  message.py  user.py
src/services/: auth.py  chat.py
src/tests/: conftest.py  utils.py
src/tests/auth/test_integration/: test_login.py  test_refresh.py  test_sign_up.py
src/tests/chat/test_integration/: test_create_chat.py
src/tests/factories/: base.py  chat.py  chat_participant.py  fakers.py  message.py  user.py
src/utils/: utils.py
src/ws/: connection.py
